--- a/ERPClient/src/app/components/layouts/layouts.component.html
+++ b/ERPClient/src/app/components/layouts/layouts.component.html
@@ -2,7 +2,7 @@
   <!-- Navbar -->
   <app-navbar></app-navbar>
 
-  <!-- Main Sidebar Container -->ü
+  <!-- Main Sidebar Container -->
   <app-main-sidebar></app-main-sidebar>
 
   <!-- Content Wrapper. Contains page content -->
