Navbar and Main Sidebar updated

--- a/ERPClient/src/app/components/home/home.component.html
+++ b/ERPClient/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-blank [routes]="['sadas']" pageName="Ana Sayfa">
+<app-blank pageName="Ana Sayfa">
   <app-section sectionTitle="ERP">
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet maiores
