--- a/ERPClient/src/app/components/login/login.component.html
+++ b/ERPClient/src/app/components/login/login.component.html
@@ -33,7 +33,9 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-block"></button>
+        <button (click)="signIn()" class="btn btn-primary btn-block">
+          Sign In
+        </button>
       </div>
     </div>
   </div>
