--- a/ERPClient/src/app/components/blank/blank.component.html
+++ b/ERPClient/src/app/components/blank/blank.component.html
@@ -1,12 +1,13 @@
 <div class="content-wrapper">
-  <!-- Content Header (Page header) -->
   <section class="content-header">
     <div class="container-fluid">
       <div class="row mb-2">
-        <div class="col-sm-6"><h1>{{pageName}}</h1></div>
+        <div class="col-sm-6">
+          <h1>{{ pageName }}</h1>
+        </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+            <li class="breadcrumb-item"><a routerLink="/">Ana Sayfa</a></li>
             @for (route of routes; track route) {
             <li class="breadcrumb-item active">{{ route }}</li>
             }
@@ -14,9 +15,6 @@
         </div>
       </div>
     </div>
-    <!-- /.container-fluid -->
   </section>
-  <!-- Main content -->
   <ng-content></ng-content>
-  <!-- /.content -->
 </div>
