--- a/ERPClient/src/app/components/customers/customers.component.html
+++ b/ERPClient/src/app/components/customers/customers.component.html
@@ -45,7 +45,12 @@
             <td>{{ customer.town }}</td>
             <td>{{ customer.fullAddress }}</td>
             <td>
-              <button class="bt btn-outline-primary btn-sm me-1">
+              <button
+                class="bt btn-outline-primary btn-sm me-1"
+                data-toggle="modal"
+                data-target="#updateModal"
+                (click)="get(customer)"
+              >
                 <i class="fa-solid fa-edit"></i>
               </button>
               <button
@@ -175,6 +180,123 @@
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-dark w-100">Kaydet</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Update Modal -->
+<div class="modal fade" id="updateModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5">Müşteri Güncelleme Formu</h1>
+        <button
+          type="button"
+          #updateModalCloseBtn
+          class="btn btn-outline-danger"
+          data-dismiss="modal"
+        >
+          <i class="fa-solid fa-close"></i>
+        </button>
+      </div>
+      <form
+        formValidate
+        [autoValidateMessage]="true"
+        autocomplete="off"
+        #updateForm="ngForm"
+        (ngSubmit)="update(updateForm)"
+      >
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="">Müşteri Adı</label>
+            <input
+              type="text"
+              [(ngModel)]="updateModel.name"
+              required
+              minlength="3"
+              class="form-control"
+              name="updateName"
+            />
+            <div class="invalid-feedback"></div>
+          </div>
+          <div class="form-group mt-2 row">
+            <div class="col-6">
+              <div class="form-group mt-2">
+                <label for="">Vergi Dairesi</label>
+                <input
+                  type="text"
+                  [(ngModel)]="updateModel.taxDepartment"
+                  required
+                  minlength="3"
+                  class="form-control"
+                  name="updateTaxDepartment"
+                />
+                <div class="invalid-feedback"></div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group mt-2">
+                <label for="">Vergi Numarası</label>
+                <input
+                  type="text"
+                  [(ngModel)]="updateModel.taxNumber"
+                  class="form-control"
+                  name="updateTaxNumber"
+                  required
+                  minlength="10"
+                  maxlength="11"
+                />
+                <div class="invalid-feedback"></div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group mt-2 row">
+            <div class="col-6">
+              <div class="form-group mt-2">
+                <label for="">Şehir</label>
+                <input
+                  type="text"
+                  [(ngModel)]="updateModel.city"
+                  required
+                  minlength="3"
+                  class="form-control"
+                  name="updateCity"
+                />
+                <div class="invalid-feedback"></div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group mt-2">
+                <label for="">İlçe</label>
+                <input
+                  type="text"
+                  [(ngModel)]="updateModel.town"
+                  required
+                  minlength="3"
+                  class="form-control"
+                  name="updateTown"
+                />
+                <div class="invalid-feedback"></div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group mt-2">
+            <label for="">Açık Adres</label>
+            <textarea
+              name="updateFullAddress"
+              [(ngModel)]="updateModel.fullAddress"
+              required
+              minlength="3"
+              class="form-control"
+              rows="5"
+            ></textarea>
+            <div class="invalid-feedback"></div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary w-100">Güncelle</button>
         </div>
       </form>
     </div>
