--- a/ERPClient/src/app/components/layouts/footer/footer.component.html
+++ b/ERPClient/src/app/components/layouts/footer/footer.component.html
@@ -1,8 +1,10 @@
 <footer class="main-footer">
-    <div class="float-right d-none d-sm-block"><b>Version</b> 3.2.0</div>
-    <strong
-      >Copyright &copy; 2014-2021
-      <a href="https://adminlte.io">AdminLTE.io</a>.</strong
-    >
-    All rights reserved.
-  </footer>
+  <div class="float-right d-none d-sm-block"><b>IYK - ERP</b></div>
+  <strong
+    >Copyright &copy; 2024
+    <a href="https://www.linkedin.com/in/isayasinkuru/" target="_blank"
+      >İsa Yasin Kuru</a
+    >.
+  </strong>
+  Tüm hakları saklıdır.
+</footer>
